--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@
     --gradiente: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
     /* colors list-container */
     --ShadowRed: hsla(0, 100%, 67%, 0.1);
-    --ShadowOrangeYellow:(39, 100%,56%, 0.1);
+    --ShadowYellow: hsla(39, 100%, 56%, 0.1);
+    --ShadowGreenTeal:hsl(166, 100%, 37%, 0.1);
+    --ShadowCobalt-blue: hsl(234, 85%, 45%, 0.1);
+    
     --Lightred: hsl(0, 100%, 67%);
     --Orangeyyellow: hsl(39, 100%, 56%);
     --Greenteal: hsl(166, 100%, 37%);
@@ -65,7 +68,7 @@ body {
     width: 280px;
     height: 400px;
     padding: 0.7rem;
-    border-radius:25px;
+    border-radius:17px;
     background-image:var(--gradiente);
 }
 
@@ -111,9 +114,8 @@ body {
 .body-container{
     width: 15%;
     height: 380px;
-    
     box-shadow: var(--Darkgrayblue) 2px 2px 5px;
-    border-radius:20px;
+    border-radius: 5px 16px 16px 5px;
     padding:0 1rem ;
 }
 
@@ -125,7 +127,6 @@ body {
 .list-container{
     display: flex;
     flex-direction: column;
-    /* padding: 0 1rem; */
 }
 
 .reaction, .memory, .verbal, .visual{
@@ -133,7 +134,6 @@ body {
     justify-content: center;
     align-items: center;
     justify-content: space-between;
-    background-color: var(--ShadowRed);
     margin: 0.7rem;
     border-radius: 10px;
     padding: 0.5rem; 
@@ -141,17 +141,21 @@ body {
 
 .reaction{
     color: var(--Lightred); 
+    background-color: var(--ShadowRed);
 }
 .memory{
     color: var(--Orangeyyellow);
+    background-color: var(--ShadowYellow);
 }
 
 .verbal{
     color: var(--Greenteal);
+    background-color: var(--ShadowGreenTeal);
 }
 
 .visual{
     color: var(--Cobalt-blue);
+    background-color: var(--ShadowCobalt-blue);
 }
 .number-reaction, .number-memory, .number-verbal, .number-visual{
     /* padding-left: 2rem; */
