--- a/style.css
+++ b/style.css
@@ -119,13 +119,13 @@ body {
 .body-container {
     width: 15%;
     height: 380px;
-    box-shadow: var(--Darkgrayblue) 2px 2px 5px;
-    border-radius: 5px 16px 16px 5px;
+    box-shadow: 1px 0 20px 2px var(--Darkgrayblue);
+    border-radius: 20px;
     padding: 0 1rem;
 }
 
 .title-h2 {
-    padding: 1rem;
+    padding: 13px 0.7rem ;
     color: var(--Darkgrayblue);
 }
 
@@ -138,10 +138,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    align-content: space-between;
     justify-content: space-between;
-    margin: 0.7rem;
+    margin: 1rem 0rem 0.6rem 0.5rem;
+    padding: 10px;
     border-radius: 10px;
-    padding: 0.6rem;
 }
 
 .reaction {
@@ -176,8 +177,8 @@ body {
 }
 
 .btn {
-    width: 85%;
-    margin: 0.5rem 1rem;
+    width: 100%;
+    margin-top: 0.7rem;
     padding: 0.7rem;
     border-radius: 20px;
     color: var(--White);
@@ -198,30 +199,27 @@ body {
     }
 }
 
-@media(max-width:664px){
-    body{
+@media(max-width:664px) {
+    body {
         flex-direction: column;
     }
 
-    .head-container{
+    .head-container {
         width: 300px;
         border-radius: 0px 0px 20px 20px;
-        position: absolute;
     }
 
-    .div-of-container{
+    .div-of-container {
         width: 140px;
         height: 140px;
     }
 
-    .h1-76{
+    .h1-76 {
         font-size: 50px;
     }
 
-    .body-container{
-        width: 302px;
+    .body-container {
+        /* width: 302px; */
         border-radius: 20px 20px 0 0;
-        position: relative;
-        bottom: -24.1rem;
     }
 }
